# inline-c-test

./: .gitignore  LICENSE  README.md  inline-c-test.cabal
src/: Main.hs
