name:                inline-c-test
version:             0.1.0.0
description:         Test code for inline-c
homepage:            https://github.com/mkoerner/inline-c-test#readme
license:             BSD3
license-file:        LICENSE
author:              Mathias Koerner
maintainer:          mkoerner@gmail.com
copyright:           2017 Mathias Koerner
category:            Example
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable inline-c-test
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , inline-c
                     , vector
  c-sources:           src/Main.c
  cc-options:          -O2
  extra-libraries:     m
